# Crew_AI_Project_1

./: README.md  pyproject.toml
src/project_coversational_expert/: crew.py  main.py
src/project_coversational_expert/config/: agents.yaml  tasks.yaml
