[project]
name = "project_coversational_expert"
version = "0.1.0"
description = "project_coversational_expert using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
project_coversational_expert = "project_coversational_expert.main:run"
run_crew = "project_coversational_expert.main:run"
train = "project_coversational_expert.main:train"
replay = "project_coversational_expert.main:replay"
test = "project_coversational_expert.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
